tests/negative/optimizer/index-copy-negative.orng
fn main() -> Int
    let mut x: [4]Int
    x[-10] = 0
    0